Version 4.0.20 (2014-03-xx)
	Fixed a performance issue with the "is" method in DOMUtils. Patch contributed by Paul Bosselaar.
	Fixed bug where paste plugin wouldn't paste plain text properly when pasting using browser menus.
Version 4.0.19 (2014-03-11)
	Added support for CSS selector expressions in object_resizing option. Allows you to control what to resize.
	Added addToTop compatibility to compat3x plugin enables more legacy 3.x plugins to work properly.
	Fixed bug on IE where it wasn't possible to align images when they where floated left.
	Fixed bug where the indent/outdent buttons was enabled though readonly mode was enabled.
	Fixed bug where the nodeChanged event was fired when readonly mode was enabled.
	Fixed bug where events like blur could be fired to editor instances that where manually removed on IE 11.
	Fixed bug where IE 11 would move focus to menubar/toolbar when using the tab key in a form with an editor.
	Fixed bug where drag/drop in Safari on Mac didn't work properly due to lack of support for modern dataTransfer object.
	Fixed bug where the remove event wasn't properly executed when the editor instances where removed.
	Fixed bug where the selection change handler on inline editors would fail if the editor instance was removed.
Version 4.0.18 (2014-02-27)
	Fixed bug where images would get class false/undefined when initially created.
Version 4.0.17 (2014-02-26)
	Added much better wai-aria accessibility support when it comes to keyboard navigation of complex UI controls.
	Added dfn,code,samp,kbd,var,cite,mark,q elements to the default remove formats list. Patch contributed by Naim Hammadi.
	Added var,cite,dfn,code,mark,q,sup,sub to the list of elements that gets cloned on enter. Patch contributed by Naim Hammadi.
	Added new visual_anchor_class option to specify a custom class for inline anchors. Patch contributed by Naim Hammadi.
	Added support for paste_data_images on WebKit/Blink when the user pastes image data.